Added Meta tags / images for OG and Twitter

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,26 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title>wiru.dev</title>
-    <meta name="description" content="William Saville - Front End Web Design Portfolio Website">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>wiru.dev - Portfolio Website</title>
+    <meta name="description" content="William Saville's portfolio website built with Vue, Javascript, Typescript, SASS, HTML5. William Saville is a Tokyo Code Chrysalis Bootcamp graduate looking for a Front End or Full Stack developer position in Japan / remote.">
+    <meta property="og:title" content="wiru.dev - Portfolio Website">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="William Saville's portfolio website built with Vue, Javascript, Typescript, SASS, HTML5. William Saville is a Tokyo Code Chrysalis Bootcamp graduate looking for a Front End or Full Stack developer position in Japan / remote.">
+    <meta property="og:site_name" content="wiru.dev">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:url" content="https://www.wiru.dev">
+    <meta property="og:image" content="https://wiru.dev/static/wirudev-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@wirudev">
+    <meta name="twitter:title" content="wiru.dev - Portfolio Website">
+    <meta name="twitter:description" content="William Saville's portfolio website built with Vue, Javascript, Typescript, SASS, HTML5. William Saville is a Tokyo Code Chrysalis Bootcamp graduate looking for a Front End or Full Stack developer position in Japan / remote.">
+    <meta name="twitter:creator" content="@wirudev">
+    <meta name="twitter:image:src" content="https://wiru.dev/static/wirudev-image.png">
+    <meta name="twitter:image:alt" content="wiru.dev">
+    <meta name="twitter:domain" content="https://wiru.dev">
+    <meta name="theme-color" content="#1591e4">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
